tests/core/ill-typed/unexpected-type-for-expression/bad-iszero.stella
language core;

fn main(x : Bool) -> Nat {
    return succ(succ(Nat::iszero(x)))
}